{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 20,
  "lineage": "3f0745e9-08e9-2ad3-542b-a34cd410010c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0bacc0246e858a2ff",
            "public_dns": "ec2-63-35-246-231.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.35.246.231",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-inecsoft-nat-ip-gateway"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_vpc_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-057b612bb18ff34df",
            "owner_id": "895352585421",
            "tags": {
              "Name": "prod-inecsoft-IGW"
            },
            "vpc_id": "vpc-08525c8385de2f27a"
          },
          "depends_on": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bacc0246e858a2ff",
            "id": "nat-097583c6dca7d1942",
            "network_interface_id": "eni-024e12dcf1745abc7",
            "private_ip": "10.0.1.70",
            "public_ip": "63.35.246.231",
            "subnet_id": "subnet-05d83e0e474df1174",
            "tags": {
              "Name": "prod-inecsoft-vpc_nat_gateway"
            }
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_internet_gateway.my_vpc_gw",
            "aws_subnet.my_vpc_subnet_public[0]"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_route_table_private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01e7247b9f23a3a8e",
            "owner_id": "895352585421",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-097583c6dca7d1942",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my_vpc_route_table_nat_private"
            },
            "vpc_id": "vpc-08525c8385de2f27a"
          },
          "depends_on": [
            "aws_nat_gateway.nat_gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_vpc_route_table_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-087ae7bd19b485d6d",
            "owner_id": "895352585421",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-057b612bb18ff34df",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MY VPC Route table public"
            },
            "vpc_id": "vpc-08525c8385de2f27a"
          },
          "depends_on": [
            "aws_internet_gateway.my_vpc_gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c79c8e786c57e83e",
            "route_table_id": "rtb-087ae7bd19b485d6d",
            "subnet_id": "subnet-05d83e0e474df1174"
          },
          "depends_on": [
            "aws_route_table.my_vpc_route_table_public",
            "aws_subnet.my_vpc_subnet_public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f581b3981a81f1ae",
            "route_table_id": "rtb-087ae7bd19b485d6d",
            "subnet_id": "subnet-06bf066fb9716c9b7"
          },
          "depends_on": [
            "aws_route_table.my_vpc_route_table_public",
            "aws_subnet.my_vpc_subnet_public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020e5758cf8bc4a69",
            "route_table_id": "rtb-087ae7bd19b485d6d",
            "subnet_id": "subnet-0d402964feae9927e"
          },
          "depends_on": [
            "aws_route_table.my_vpc_route_table_public",
            "aws_subnet.my_vpc_subnet_public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0787571d88a8d9c82",
            "route_table_id": "rtb-01e7247b9f23a3a8e",
            "subnet_id": "subnet-0c69d9d4d20caea14"
          },
          "depends_on": [
            "aws_route_table.my_vpc_route_table_private",
            "aws_subnet.my_vpc_subnet_private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e24fe7a33a03733f",
            "route_table_id": "rtb-01e7247b9f23a3a8e",
            "subnet_id": "subnet-048946a359d9ecb01"
          },
          "depends_on": [
            "aws_route_table.my_vpc_route_table_private",
            "aws_subnet.my_vpc_subnet_private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08361d142174f8a23",
            "route_table_id": "rtb-01e7247b9f23a3a8e",
            "subnet_id": "subnet-0b3adfc3289ab73fa"
          },
          "depends_on": [
            "aws_route_table.my_vpc_route_table_private",
            "aws_subnet.my_vpc_subnet_private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:security-group/sg-0875a256b0b9f1f64",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0875a256b0b9f1f64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my_security_group",
            "name_prefix": null,
            "owner_id": "895352585421",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-inecsoft-security_group}"
            },
            "timeouts": null,
            "vpc_id": "vpc-08525c8385de2f27a"
          },
          "depends_on": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_vpc_subnet_private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-0c69d9d4d20caea14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0c69d9d4d20caea14",
            "map_public_ip_on_launch": false,
            "owner_id": "895352585421",
            "tags": {
              "Name": "prod-inecsoft-subnet_private-1"
            },
            "vpc_id": "vpc-08525c8385de2f27a"
          },
          "depends_on": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-048946a359d9ecb01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-048946a359d9ecb01",
            "map_public_ip_on_launch": false,
            "owner_id": "895352585421",
            "tags": {
              "Name": "prod-inecsoft-subnet_private-2"
            },
            "vpc_id": "vpc-08525c8385de2f27a"
          },
          "depends_on": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-0b3adfc3289ab73fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0b3adfc3289ab73fa",
            "map_public_ip_on_launch": false,
            "owner_id": "895352585421",
            "tags": {
              "Name": "prod-inecsoft-subnet_private-3"
            },
            "vpc_id": "vpc-08525c8385de2f27a"
          },
          "depends_on": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_vpc_subnet_public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-05d83e0e474df1174",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05d83e0e474df1174",
            "map_public_ip_on_launch": true,
            "owner_id": "895352585421",
            "tags": {
              "Name": "prod-inecsoft-subnet_public-1"
            },
            "vpc_id": "vpc-08525c8385de2f27a"
          },
          "depends_on": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-06bf066fb9716c9b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06bf066fb9716c9b7",
            "map_public_ip_on_launch": true,
            "owner_id": "895352585421",
            "tags": {
              "Name": "prod-inecsoft-subnet_public-2"
            },
            "vpc_id": "vpc-08525c8385de2f27a"
          },
          "depends_on": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:subnet/subnet-0d402964feae9927e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0d402964feae9927e",
            "map_public_ip_on_launch": true,
            "owner_id": "895352585421",
            "tags": {
              "Name": "prod-inecsoft-subnet_public-3"
            },
            "vpc_id": "vpc-08525c8385de2f27a"
          },
          "depends_on": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:895352585421:vpc/vpc-08525c8385de2f27a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-073e6adfb9175b1be",
            "default_route_table_id": "rtb-08f8f3a1ef8111b86",
            "default_security_group_id": "sg-062157e92c4d10067",
            "dhcp_options_id": "dopt-ce1e70a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08525c8385de2f27a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08f8f3a1ef8111b86",
            "owner_id": "895352585421",
            "tags": {
              "Name": "prod-inecsoft-VPC"
            }
          }
        }
      ]
    }
  ]
}